--- a/PetStore/build.gradle
+++ b/PetStore/build.gradle
@@ -12,6 +12,12 @@ repositories {
 dependencies {
     testImplementation group: 'org.testng', name: 'testng', version: '7.1.0'
     testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.3.3'
+    // https://mvnrepository.com/artifact/com.opencsv/opencsv
+    implementation group: 'com.opencsv', name: 'opencsv', version: '4.6'
+    // https://mvnrepository.com/artifact/org.json/json
+    implementation group: 'org.json', name: 'json', version: '20160810'
+
+
 }
 
 
